# chip-8-emulator

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: chip_8.cpp  chip_8.h  chip_8.hpp  main.cpp  platform.cpp  platform.h  platform.hpp
